--- a/preambolo.sty
+++ b/preambolo.sty
@@ -49,7 +49,7 @@
 \newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \newcommand{\autoreb}{Orlando Iovino}
 \newcommand{\autorea}{Mosè Giordano}
-\newcommand{\autorec}{Matteo Leccardi} % manca nome e cognome
+\newcommand{\autorec}{Matteo Leccardi}
 \newcommand{\autori}{\autorea, \autoreb, \autorec}
 
 \RequirePackage[%
