Modifica al paragrafo di installazione su Windows

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -118,6 +118,11 @@ cartella:
 C:/Programmi/emacs/bin
 \end{Verbatim}
 
+%% 2012/08/19: Verificare questa affermazione, su Windows 7 è così.
+A questo punto \emacs{} è pronto per scrivere documenti in \LaTeX; l'utente
+infatti non deve specificare nessun percorso circa gli eseguibili della
+distribuzione installata: sarà \emacs{} stesso a trovarli.
+
 \subsection{\emacs{} per GNU/Linux}
 \label{sec:installlinux}
 
