Modifiche all'installazione di AUCTeX per Windows; aggiunto un cenno anche alla nuova modalitÃ

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -223,9 +223,20 @@ si scarica l'archivio compresso %
 \begin{Verbatim}
 C:/Programmi/emacs/
 \end{Verbatim}
-Sia nell'archivio di \auctex{}, che quello di \emacs, posizionato in precedenza
+
+Sia nell'archivio di \auctex{} che quello di \emacs, posizionato in precedenza
 nel percorso suddetto, vi è una cartella dal nome \emph{site-lisp}: i file
 contenuti in queste cartelle vanno uniti in una sola cartella.
+
+
+%% 2012/08/19: Quasta modifica dovrebbe valere per tutti e tre i sitemi operati:
+%% si potrebbe pensare di metterla in testa al paragrafo per poi specificare le
+%% procedure "vecchie".
+A partire dalla versione 24.1 si possono installare i pacchetti di estensine
+per \emacs{} direttamente da \emacs{}. Basta infatti scrivere 
+\verb!M-x list packages! e verranno visualizzati tutti i pacchetti disponibili, installati e
+non. \auctex, quindi, può essere installato anche in questo modo, premendo
+semplicemente su \emph{Install} dopo averlo selezionato.
 
 \subsection{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
