Modifiche al preambolo

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -1,7 +1,7 @@
 \listfiles
 \documentclass[11pt,a4paper]{article}
 
-\title{\titolo}
+\title{\bfseries\titolo}
 \author{\autorea \and \autoreb \and \autorec}
 \date{\today}
 
