--- a/introemacs.tex
+++ b/introemacs.tex
@@ -632,7 +632,7 @@ mediante il proprio file \emph{.emacs}.
 
 Per la ricerca inversa si deve aprire SumatraPDF, andare in
 \texttt{Impostazioni} e quindi scegliere \texttt{Opzioni...} e
-digitare la riga
+scrivere la riga
 \begin{Verbatim}
 C:/Programmi/emacs/bin/emacsclientw.exe +%l "%f"
 \end{Verbatim}
