--- a/preambolo.sty
+++ b/preambolo.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{preambolo}
+﻿\ProvidesPackage{preambolo}
 
 \RequirePackage[T1]{fontenc}
 \RequirePackage{textcomp}
@@ -41,9 +41,11 @@
   fontsize=\small,%
 }
 
+
 \RequirePackage[babel]{csquotes}
 \RequirePackage[backend=biber]{biblatex}
 \addbibresource{biblio.bib}
+
 
 \newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \newcommand{\autoreb}{Orlando Iovino}
