--- a/preambolo.sty
+++ b/preambolo.sty
@@ -1,13 +1,9 @@
-﻿\ProvidesPackage{preambolo}
+\ProvidesPackage{preambolo}
 
 \RequirePackage[T1]{fontenc}
 \RequirePackage{textcomp}
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[english,italian]{babel}
-
-% \usepackage{tgtermes}            %[Serif Fonts]
-% \usepackage[scale=0.85]{tgheros} %[Sans Serif Fonts]
-% \usepackage{tgcursor}            %[Typewriter Fonts]
 
 \renewcommand{\rmdefault}{ptm}
 \RequirePackage[scaled=0.890]{helvet}
@@ -40,7 +36,6 @@
   %frame=single,%
   fontsize=\small,%
 }
-
 
 \RequirePackage[babel]{csquotes}
 \RequirePackage[backend=biber]{biblatex}
