--- a/introemacs.tex
+++ b/introemacs.tex
@@ -946,6 +946,7 @@ gradita la segnalazione di errori o refusi.
 %%% coding: utf-8
 %%% TeX-master: t
 %%% fill-column: 80
+%%% reftex-default-bibliography: "biblio.bib"
 %%% End:
 
 % LocalWords:  mirror OS For dmg Git Fast Version Control System clonare git
