Diverse modifiche, alcune irrilevanti. Su tutte, la piÃ¹ impostante Ã¨ la scelta del font sul Latin modern. Per il sottoscritto puÃ² essere quello definitivo. Modifica alla bibliografia

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,51 +1,55 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.8.1.
 % Encoding: UTF8
 
-@MISC{will:due,
-  author = {William Blum},
-  title	 = {Configuring editors with SumatraPDF},
-  year	 = {2011},
-  url	 = {http://william.famille-blum.org/blog/index.php} 
+@ONLINE{emacsW32:wiki,
+  author = {Autori vari},
+  title = {EmacsWiki: Site Map},
+  year = {2012},
+  url = {http://www.emacswiki.org}
 }
 
-@MISC{will:uno,
-  author = {William Blum},
-  title  = {SumatraPDF for TeX users},
-  year   = {2011},
-  url    = {http://william.famille-blum.org/software/sumatra/index.html}
+@ARTICLE{emacs:odebari,
+  author = {Onofrio de Bari},
+  title = {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
+  journaltitle = {Ars\TeX nica},
+  year = {2006},
+  date = {ottobre},
+  language = {italian},
+  number = {2},
+  month = {10},
+  pages = {60-64},
+  issn = {1828-2350},
+  url = {http://www.guitex.org/home/it/numero-2}
 }
 
-@MISC{emacsW32:wiki,
-  title  = {Emacs Wiki},
-  year   = {2012},
-  url    = {http://www.emacswiki.org}
+@ONLINE{will:due,
+  author = {William Blum},
+  title = {Configuring editors with SumatraPDF},
+  year = {2011},
+  url = {http://william.famille-blum.org/blog/index.php}
+}
+
+@ONLINE{will:uno,
+  author = {William Blum},
+  title = {SumatraPDF for TeX users},
+  year = {2011},
+  url = {http://william.famille-blum.org/software/sumatra/index.html}
 }
 
 @MANUAL{emacs:stallman,
-  title        = {GNU Emacs Manual},
-  author       = {Richard Stallman},
+  author = {Richard Stallman},
+  title = {GNU Emacs Manual},
+  year = {2010},
+  edition = {16},
   organization = {Free Software Foundation, Inc.},
-  edition      = {16},
-  year         = {2010},
-  url          = {www.gnu.org/software/emacs/manual/emacs.pdf}
+  url = {www.gnu.org/software/emacs/manual/emacs.pdf}
 }
 
 @MANUAL{auctex:manual,
-  title        = {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
-  author       = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},     
+  author = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},
+  title = {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
+  year = {2010},
   organization = {Free Software Foundation, Inc.},
-  year         = {2010},
-  url          = {www.gnu.org/software/auctex/manual/auctex.pdf}
+  url = {www.gnu.org/software/auctex/manual/auctex.pdf}
 }
-@ARTICLE{emacs:odebari,
-  author       = {Onofrio de Bari},
-  title	       = {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
-  journal      = {Ars\TeX nica},
-  year	       = {2006},
-  number       = {2},
-  pages	       = {60-64},
-  month	       = {10},
-  language     = {italian},
-  issn	       = {1828-2350},
-  url	       = {http://www.guitex.org/home/it/numero-2}
-}
+
