--- a/introemacs.tex
+++ b/introemacs.tex
@@ -929,7 +929,7 @@ aggiungere queste righe al file \emph{.emacs}
 Quest'opera è soggetta alla Creative Commons Public License versione 3.0 o
 posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi} allo
 stesso modo. L'enunciato integrale della licenza è reperibile sul sito ufficiale
-\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.\\%
+\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.\\
 
 \noindent La realizzazione di questo lavoro a sei mani si è resa possibile
 grazie al sistema di controllo di versione Git (\url{http://git-scm.com}). Per
