--- a/preambolo.sty
+++ b/preambolo.sty
@@ -7,13 +7,7 @@
 \RequirePackage{lmodern}
 \RequirePackage{microtype}
 
-\RequirePackage[%
-  a4paper,%
-  top=2.5cm,%
-  bottom=2.5cm,%
-  left=3cm,%
-  right=3cm,%
-]{geometry}
+\RequirePackage[showframe]{geometry}
 
 \RequirePackage{marvosym}
 \RequirePackage{graphicx}
