--- a/introemacs.tex
+++ b/introemacs.tex
@@ -222,6 +222,24 @@ graffe e la tilde, scrivendo queste righe nel file \emph{.emacs}
 \section{Installare \auctex}
 \label{sec:installauc}
 
+A partire dalla versione 24.1 di \emacs{} si possono installare i pacchetti di
+estensione all'interno di \emacs{} stesso. Basta infatti eseguire
+\verb!M-x list-packages! e verranno visualizzati tutti i pacchetti disponibili,
+installati e non. \auctex, quindi, può essere installato in questo modo,
+premendo semplicemente su \emph{Install} dopo averlo selezionato.
+% TODO (Mosè 30/10/2012): immagino che se si segue questa procedura sia
+% necessario aggiungere una qualche cartella al `load-path' con
+%       (add-to-list 'load-path "<PERCORSO>")
+% e poi caricare `auctex' e `preview-latex' con
+%       (load "auctex.el" nil t t)
+%       (load "preview-latex.el" nil t t)
+% Non ho ancora Emacs 24, ancora non so quale sia la procedura completa.
+
+Per installare \auctex{} in una versione di \emacs{} precedente alla 24.1 è
+necessario seguire una procedura diversa a seconda del sistema operativo
+utilizzato.  Di seguito sono riportate le istruzioni da seguire in questo caso
+per Windows, GNU/Linux e Mac OS.
+
 \subsection{\auctex{} per Windows}
 \label{sec:auctexwin}
 
@@ -235,16 +253,6 @@ C:/Programmi/emacs/
 Sia nell'archivio di \auctex{} che quello di \emacs, posizionato in precedenza
 nel percorso suddetto, vi è una cartella dal nome \emph{site-lisp}: i file
 contenuti in queste cartelle vanno uniti in una sola cartella.
-
-%%
-%% 2012/08/19: Quasta modifica dovrebbe valere per tutti e tre i sitemi operati:
-%%             si potrebbe pensare di metterla in testa al paragrafo per poi
-%%             specificare le procedure "vecchie".
-A partire dalla versione 24.1 si possono installare i pacchetti di estensine per
-\emacs{} direttamente da \emacs{}. Basta infatti scrivere
-\verb!M-x list-packages! e verranno visualizzati tutti i pacchetti disponibili,
-installati e non. \auctex, quindi, può essere installato anche in questo modo,
-premendo semplicemente su \emph{Install} dopo averlo selezionato.
 
 \subsection{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
